modified makefile for have it working with the thinkpad

--- a/usart/Makefile
+++ b/usart/Makefile
@@ -1,6 +1,8 @@
 
 # Put your stlink folder here so make burn will work.
-STLINK=/usr/local/bin
+STLINK=/home/blacksmith/usr/local/bin
+
+#per il portatile grande e solo /usr/local/bin
 
 # Put your source files here (or *.c, etc)
 SRCS=main.c system_stm32f4xx.c
